terraform/main.tf
resource "aws_vpc" "fastapi_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "FastAPI-VPC"
  }
}

resource "aws_internet_gateway" "fastapi_igw" {
  vpc_id = aws_vpc.fastapi_vpc.id
  tags = {
    Name = "FastAPI-IGW"
  }
}

resource "aws_subnet" "fastapi_public_subnet" {
  vpc_id                  = aws_vpc.fastapi_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "FastAPI-Public-Subnet"
  }
}

resource "aws_route_table" "fastapi_public_rt" {
  vpc_id = aws_vpc.fastapi_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.fastapi_igw.id
  }
  tags = {
    Name = "FastAPI-Public-RT"
  }
}

# table association
resource "aws_route_table_association" "fastapi_public_rta" {
  subnet_id      = aws_subnet.fastapi_public_subnet.id
  route_table_id = aws_route_table.fastapi_public_rt.id
}
# Security Group
resource "aws_security_group" "fastapi_sg" {
  name        = "fastapi-sg"
  description = "Security group for FastAPI application"
  vpc_id      = aws_vpc.fastapi_vpc.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "FastAPI-SG"
  }
}

resource "aws_instance" "fastapi_server" {
  ami      ="ami-07d9b9ddc6cd8dd30"
  instance_type      = var.instance_type
  subnet_id      = aws_subnet.fastapi_public_subnet.id
  key_name      = "my-ec2-key"    

  vpc_security_group_ids = [aws_security_group.fastapi_sg.id]

  user_data = <<-EOF
              #!/bin/bash
              sudo apt update -y
              sudo apt install docker.io -y
              sudo systemctl enable --now docker
              sudo usermod -aG docker ubuntu
              EOF

  tags = {
    Name = "FastAPIApp"
  }
}


# Elastic ip 
resource "aws_eip" "fastapi_eip" {
  instance = aws_instance.fastapi_server.id
  vpc      = true
}
